[package]
name = "ramsey"
version = "0.1.0"
description = "Tools for investigating Ramsey numbers and 2-colorings on undirected, unweighted graphs"


authors = ["lonnen <chris.lonnen@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/lonnen/ramsey"
readme = "README.md"

[dependencies]
structopt = "0.3"
thiserror = "1.0"
